Fix other list css on mobile

--- a/components/pages/ProductDetailPage/productDetailPage.module.scss
+++ b/components/pages/ProductDetailPage/productDetailPage.module.scss
@@ -74,4 +74,10 @@
       @apply w-full;
     }
   }
+  .other-list {
+    @apply px-4;
+    .list-product {
+      @apply grid-cols-1;
+    }
+  }
 }
